--- a/index.html
+++ b/index.html
@@ -113,5 +113,34 @@
           
           <button type="submit">إرسال الإجابات</button>
         </form>
+      <section id="quiz">
+  <h2>اختبار التوعية بالتنمر</h2>
+  <p>أجب على الأسئلة التالية لتقييم مدى معرفتك حول التنمر وكيفية التعامل معه:</p>
+  <form action="#" method="POST" id="quizForm">
+    <fieldset>
+      <legend>عندما يتنمر عليك شخص ما، هل:</legend>
+      <label><input type="radio" name="question1" value="a"> أتحمل وألتزم الصمت</label><br>
+      <label><input type="radio" name="question1" value="b"> أخبر شخصاً بالغاً أو صديقاً</label><br>
+      <label><input type="radio" name="question1" value="c"> أتحمل الوضع وأرد عليه بنفس الطريقة</label><br>
+    </fieldset>
+
+    <fieldset>
+      <legend>عندما يتنمر عليك أحد زملائك في العمل أو المدرسة، هل تشعر بـ:</legend>
+      <label><input type="radio" name="question2" value="a"> الخوف والقلق المستمر</label><br>
+      <label><input type="radio" name="question2" value="b"> الحزن وعدم الثقة بالنفس</label><br>
+      <label><input type="radio" name="question2" value="c"> رغبة في الانتقام أو الرد العنيف</label><br>
+    </fieldset>
+
+    <fieldset>
+      <legend>عندما يطلب منك شخص ما أن تقف في صفه ضد شخص آخر يتم التنمر عليه، هل:</legend>
+      <label><input type="radio" name="question3" value="a"> أوافق وأساعده</label><br>
+      <label><input type="radio" name="question3" value="b"> أتحفظ ولا أشارك</label><br>
+      <label><input type="radio" name="question3" value="c"> أتجاهل الموقف بالكامل</label><br>
+    </fieldset>
+
+    <button type="submit">إرسال الإجابات</button>
+  </form>
+</section>
+
       </section>
       </html>
