--- a/index.html
+++ b/index.html
@@ -113,34 +113,48 @@
           
           <button type="submit">إرسال الإجابات</button>
         </form>
-      <section id="quiz">
-  <h2>اختبار التوعية بالتنمر</h2>
-  <p>أجب على الأسئلة التالية لتقييم مدى معرفتك حول التنمر وكيفية التعامل معه:</p>
-  <form action="#" method="POST" id="quizForm">
-    <fieldset>
-      <legend>عندما يتنمر عليك شخص ما، هل:</legend>
-      <label><input type="radio" name="question1" value="a"> أتحمل وألتزم الصمت</label><br>
-      <label><input type="radio" name="question1" value="b"> أخبر شخصاً بالغاً أو صديقاً</label><br>
-      <label><input type="radio" name="question1" value="c"> أتحمل الوضع وأرد عليه بنفس الطريقة</label><br>
-    </fieldset>
+   <script>
+  document.getElementById('quizForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent form submission and page reload
 
-    <fieldset>
-      <legend>عندما يتنمر عليك أحد زملائك في العمل أو المدرسة، هل تشعر بـ:</legend>
-      <label><input type="radio" name="question2" value="a"> الخوف والقلق المستمر</label><br>
-      <label><input type="radio" name="question2" value="b"> الحزن وعدم الثقة بالنفس</label><br>
-      <label><input type="radio" name="question2" value="c"> رغبة في الانتقام أو الرد العنيف</label><br>
-    </fieldset>
+    let points = 0; // Initialize score
 
-    <fieldset>
-      <legend>عندما يطلب منك شخص ما أن تقف في صفه ضد شخص آخر يتم التنمر عليه، هل:</legend>
-      <label><input type="radio" name="question3" value="a"> أوافق وأساعده</label><br>
-      <label><input type="radio" name="question3" value="b"> أتحفظ ولا أشارك</label><br>
-      <label><input type="radio" name="question3" value="c"> أتجاهل الموقف بالكامل</label><br>
-    </fieldset>
+    // Check answers
+    const question1 = document.querySelector('input[name="question1"]:checked');
+    if (question1 && question1.value === 'b') {
+      points += 1; // Correct answer for question 1
+    }
 
-    <button type="submit">إرسال الإجابات</button>
-  </form>
-</section>
+    const question2 = document.querySelector('input[name="question2"]:checked');
+    if (question2 && question2.value === 'b') {
+      points += 1; // Correct answer for question 2
+    }
+
+    const question3 = document.querySelector('input[name="question3"]:checked');
+    if (question3 && question3.value === 'a') {
+      points += 1; // Correct answer for question 3
+    }
+
+    // Display the result
+    const resultDiv = document.getElementById('quizResult');
+    if (!resultDiv) {
+      const newResultDiv = document.createElement('div');
+      newResultDiv.id = 'quizResult';
+      newResultDiv.style.marginTop = '20px';
+      newResultDiv.style.padding = '10px';
+      newResultDiv.style.border = '1px solid #007bff';
+      newResultDiv.style.borderRadius = '5px';
+      newResultDiv.style.backgroundColor = '#f8f9fa';
+      newResultDiv.style.textAlign = 'center';
+      newResultDiv.innerHTML = `<strong>لقد حصلت على ${points} نقطة!</strong>`;
+      this.appendChild(newResultDiv); // Append below the form
+    } else {
+      resultDiv.innerHTML = `<strong>لقد حصلت على ${points} نقطة!</strong>`;
+    }
+  });
+</script>
+
+      
 
       </section>
       </html>
